# lore-web-collections

./: Cargo.toml  README.md
impl/lore-impl-web-collections-2026-04-07-1/: Cargo.toml
impl/lore-impl-web-collections-2026-04-07-2/: Cargo.toml
impl/lore-impl-web-collections-2026-04-07-2/src/: lore_html.rs  parser.rs
lexer/lore-lexer-web-collections-2026-04-07-1/: Cargo.toml  README.md
lexer/lore-lexer-web-collections-2026-04-07-1/examples/: examples.lore
lexer/lore-lexer-web-collections-2026-04-07-1/src/: lib.rs
lexer/lore-lexer-web-collections-2026-04-07-1/tests/: test.rs
lexer/lore-lexer-web-collections-2026-04-07-2/: Cargo.toml
lore-web-collections-core/: Cargo.toml
lore-web-collections-core/src/: lib.rs
