[workspace]
members = [
    "lore-web-collections-core",
    "lexer/lore-lexer-web-collections-2026-04-07-1",
    "lexer/lore-lexer-web-collections-2026-04-07-2",
    "impl/lore-impl-web-collections-2026-04-07-1",
    "impl/lore-impl-web-collections-2026-04-07-2",
    "bin/lore-bin-web-collections-2026-04-07-1"
    ]
resolver = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"