[package]
name = "lore-impl-web-collections-2026-04-07-2"
version = "0.1.3"
edition = "2024"
description = "Lore Impl Web Collections 2026 04 07 2"
license = "MIT"
homepage = "https://fleetinglore.github.io"
repository = "https://github.com/dotCorain/lore-web-collections"
readme = "README.md"

[dependencies]
lore-web-collections-core = { version = "0.1.1" }

[features]
math = []
default = []